# maes

./: .env.example  .gitignore  BUID.md  Cargo.toml  Makefile.toml  README.md  package.json  webpack.config.js
aide/: Cargo.toml  tauri.conf.json
aide/capabilities/: default.json  mobile-capability.json
aide/icons/: icon.icns
aide/src/: lib.rs  main.rs
aide_ui/: Cargo.toml  Dioxus.toml  tailwind.css
aide_ui/assets/: main.js  tailwind.css
aide_ui/src/: main.rs
aide_ui/src/common/: mod.rs  route.rs
aide_ui/src/components/dialogs/: dialog.rs  mod.rs
aide_ui/src/elements/: app_layout.rs  clean_layout.rs  head.rs  header.rs  mod.rs
aide_ui/src/pages/: home.rs  mod.rs  qr_scanner.rs
aide_ui/src/services/: barcode_scanner.rs  mod.rs
client/: Cargo.toml  Dioxus.toml  tailwind.css
client/assets/: main.js
client/src/: main.rs
client/src/common/: mod.rs  route.rs
client/src/components/: loading.rs  mod.rs  timer.rs
client/src/elements/: clean_layout.rs  client_layout.rs  head.rs  header.rs  mod.rs
client/src/pages/: error.rs  home.rs  initial.rs  mod.rs
client/src/pages/quiz/: details.rs  finish.rs  mod.rs  start.rs  take.rs
client/src/pages/survey/: details.rs  finish.rs  mod.rs  retry.rs  start.rs  take.rs
client/src/services/: client.rs  error.rs  mod.rs  quiz.rs  survey.rs
client/src/utils/: misc.rs  mod.rs
i18n/: uk_UA.ftl
maes/: Cargo.toml  Dioxus.toml  build.rs  tailwind.css
maes/assets/: main.js
maes/src/: main.rs
maes/src/common/: mod.rs  route.rs  state.rs
maes/src/components/: mod.rs
maes/src/components/dialogs/: add_student.rs  create_user.rs  create_workspace.rs  dialog.rs  file.rs  input.rs  mod.rs
maes/src/components/inputs/: mod.rs  select.rs  text.rs  text_area.rs
maes/src/components/quiz/: editor.rs  editor_category.rs  editor_question.rs  editor_quiz.rs  mod.rs  tree.rs
maes/src/components/students/: list.rs  mod.rs
maes/src/components/survey/: editor.rs  editor_category.rs  editor_survey.rs  mod.rs  tree.rs
maes/src/components/tasks/: cards.rs  inspector.rs  list.rs  mod.rs  quiz_inspector.rs  survey_inspector.rs
maes/src/components/widgets/: breadcrumbs.rs  calendar.rs  charts.rs  context_menu.rs  mod.rs  panel.rs  progress_circle.rs  rating.rs  resizer.rs  split_panel.rs  steps.rs  themes.rs
maes/src/components/wizards/task/: mod.rs  step1.rs  step2.rs  step3.rs  step4.rs
maes/src/components/workspace/: list.rs  mod.rs  tree.rs  users.rs
maes/src/elements/: app_header.rs  app_layout.rs  child_header.rs  clean_layout.rs  head.rs  mock_header.rs  mod.rs  side_menu.rs
maes/src/pages/: about.rs  login.rs  mod.rs  quiz_manager.rs  reports.rs  settings.rs  students.rs  survey_manager.rs  task_wizard.rs  tasks.rs  workspace_manager.rs  workspace_quizzes.rs  workspace_surveys.rs
maes/src/reports/: mod.rs  quiz.rs  quiz_tickets.rs  survey.rs  survey_tickets.rs  wifi_instruction.rs
maes/src/services/: auth.rs  client.rs  config.rs  dispatcher.rs  exchange.rs  hotspot.rs  mod.rs  toast.rs  update.rs
maes/src/window/: child.rs  manager.rs  mock.rs  mod.rs
maes/src/windows/: mock.rs  mod.rs
res/ai_model/: make_ukr_model.py
res/icon/: icon.ai
res/installer/: installer.ai
server/: Cargo.toml  build.rs
server/src/: lib.rs
server/src/common/: mod.rs  router.rs  state.rs
server/src/handlers/: activity.rs  auth.rs  entity.rs  exchange.rs  health.rs  image.rs  mod.rs  quiz_activity.rs  quiz_manager.rs  students.rs  survey_activity.rs  survey_manager.rs  task.rs  workspace.rs  workspace_users.rs
server/src/middleware/: connection.rs  headers.rs  mod.rs  session.rs
server/src/repositories/: entity.rs  mod.rs  student.rs  task.rs
server/src/services/: exchange.rs  image.rs  mod.rs  store.rs  text_similarity.rs
shared/: Cargo.toml  build.rs
shared/src/: lib.rs
shared/src/common/: error.rs  mod.rs  result.rs
shared/src/models/: claims.rs  config.rs  entity.rs  grid.rs  metadata.rs  mod.rs  quiz.rs  quiz_activity.rs  quiz_record.rs  student.rs  survey.rs  survey_activity.rs  survey_record.rs  task.rs  tree.rs  workspace.rs
shared/src/payloads/: auth.rs  entity.rs  exchange.rs  image.rs  mod.rs  quiz.rs  students.rs  survey.rs  task.rs  workspace.rs
shared/src/services/: clipboard.rs  crypto.rs  dispatcher.rs  env.rs  form_event.rs  i18n.rs  log.rs  mod.rs  qr_generator.rs  runtime.rs  uid.rs
shared/src/utils/: app_icon.rs  cachable.rs  host.rs  misc.rs  mod.rs  serializer.rs  tree_ext.rs
