[workspace]
resolver = "3"
members = ["client", "shared", "maes", "server"]
default-members = ["maes"]

[workspace.package]
edition = "2024"
version = "0.2.0"
description = "Military Aptitude & Evaluation System"
keywords = ["Rust", "LMS", "WASM", "application"]
authors = ["Anatolii Shliakhto <a.shlyakhto@gmail.com>"]
repository = "https://github.com/AnatoliiShliakhto/maes"
readme = "README.md"
license = "MIT"

[workspace.dependencies]
aes-gcm = { version = "0.11.0-rc.1" }
arboard = { version = "3.6.1" }
argon2 = { version = "0.6.0-rc.1" }
axum = { version = "0.8.6" }
axum-server = { version = "0.7.2" }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.42" }
csv = { version = "1.3.1" }
dashmap = { version = "7.0.0-rc2" }
dioxus = { version = "0.7.0-rc.0" }
dirs = { version = "6.0.0" }
dotenvy = { version = "0.15.7" }
fluent-bundle = { version = "0.16.0" }
futures = { version = "0.3.31" }
getrandom = { version = "0.3.3" }
gloo-timers = { version = "0.3.0" }
image = { version = "0.25.8", features = ["jpeg", "png", "webp", "bmp", "gif"] }
indexmap = { version = "2.11.4", features = ["serde"] }
lz4_flex = { version = "0.11.5" }
moka = { version = "0.12.11", features = ["future"] }
nanoid = { version = "0.4.0" }
pbkdf2 = { version = "0.13.0-rc.1" }
qrcode-generator = { version = "5.0.0" }
reqwest = { version = "0.12.23", features = ["json"] }
rfd = { version = "0.15.4" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_repr = { version = "0.1.20" }
sha2 = { version = "0.11.0-rc.2" }
subtle = { version = "2.6.1" }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
tracing = { version = "0.1.41" }
tracing-appender = { version = "0.2.3" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
unic-langid = { version = "0.9.6" }
web-sys = { version = "0.3.81" }
winres = { version = "0.1.12" }
windows = { version = "0.62.2", features = [
    "Foundation",
    "Networking",
    "Networking_NetworkOperators",
    "Networking_Connectivity",
    "Devices_WiFiDirect",
    "Devices_Enumeration",
    "Storage_Streams",
    "Networking_Sockets",
    "Security_Credentials"
] }
