[package]
name = "aide"
edition.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[lib]
name = "aide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["mobile"]
mobile = []

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = { workspace = true }
