[package]
name = "aide_ui"
edition.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared", features = ["wasm"] }
dioxus = { workspace = true, features = ["web", "router"] }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde-wasm-bindgen = "0.6.5"

