[package]
name = "client"
edition.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared", features = ["wasm"] }
dioxus = { workspace = true, features = ["web", "logger", "router"] }
gloo-timers = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
web-sys = { workspace = true }
