[package]
name = "maes"
edition.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
server = { path = "../server" }
shared = { path = "../shared", features = ["desktop", "wasm"] }
chrono = { workspace = true }
dioxus = { workspace = true, features = ["desktop", "logger", "router"] }
dirs = { workspace = true }
indexmap = { workspace = true }
reqwest = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
windows = { workspace = true }
web-sys = { workspace = true }

[build-dependencies]
dotenvy = { workspace = true }
winres = { workspace = true }
