[package]
name = "server"
edition.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared", features = ["server"] }
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
moka = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }

[build-dependencies]
dotenvy = { workspace = true }