[package]
name = "server"
edition.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared", features = ["server"] }
axum = { workspace = true }
axum-server = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }
moka = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[build-dependencies]
dotenvy = { workspace = true }