[package]
name = "server"
edition.workspace = true
version.workspace = true
description.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
shared = { path = "../shared", features = ["server"] }
axum = { workspace = true }
axum-server = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
indexmap = { workspace = true }
futures = { workspace = true }
moka = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }

[build-dependencies]
dotenvy = { workspace = true }